# ouroboros

./: .gitignore  CONTRIBUTING.md  README.md  VERSION  launcher.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml  sync-joi-lab-fork.yml
devtools/benchmarks/: README.md
docs/: ARCHITECTURE.md  CHECKLISTS.md  CREATING_SKILLS.md  DEVELOPMENT.md
ouroboros/: agent.py  agent_startup_checks.py  agent_task_pipeline.py  artifacts.py  capability_evidence.py  cli.py  code_search_rg.py  colab_bootstrap.py  config.py  consciousness.py  consolidator.py  context.py  deep_self_review.py  extension_companion.py  extension_isolated_deps.py  extension_loader.py  extension_process_runner.py  git_shell_policy.py  headless.py  improvement_backlog.py  launcher_bootstrap.py  llm.py  loop.py  loop_llm_call.py  loop_tool_execution.py  mcp_api.py  mcp_client.py  observability.py  outcomes.py  owner_inject.py  packaged_cli.py  platform_layer.py  post_task_evolution.py  preflight_runner.py  pricing.py  process_custody.py  projects_registry.py  provider_models.py  reflection.py  repo_remotes.py  (+24 more)
ouroboros/contracts/: __init__.py  plugin_api.py  skill_payload_policy.py  task_constraint.py  task_contract.py
ouroboros/gateway/: contracts.py  control.py  extensions.py  files.py  history.py  host_service.py  logs.py  marketplace.py  projects.py  router.py  settings.py  tasks.py  ws.py
ouroboros/gateways/: claude_code.py
ouroboros/marketplace/: clawhub.py  install.py  isolated_deps.py  ouroboroshub.py
ouroboros/tools/: browser.py  claude_advisory_review.py  commit_gate.py  control.py  control_delegation.py  core.py  git.py  join_ledger.py  media.py  parallel_review.py  plan_review.py  query_code.py  recent_tasks.py  registry.py  release_sync.py  review.py  review_helpers.py  review_synthesis.py  scope_review.py  search.py  services.py  shell.py  shell_guards.py  shell_parse.py  skill_exec.py  verify.py  vision.py
prompts/: CONSCIOUSNESS.md  SAFETY.md  SYSTEM.md
scripts/: build_repo_bundle.py  run_external_review.py  swebench_cli_agent.py  terminal_bench_cli_agent.py
supervisor/: events.py  evolution_lifecycle.py  git_ops.py  message_bus.py  queue.py  state.py  task_reaper.py  workers.py
tests/: _shared.py  conftest.py  test_acting_subagents.py  test_advisory_observability.py  test_advisory_preflight.py  test_agent_task_pipeline.py  test_browser_isolation.py  test_budget_tracking.py  test_cache_optimization.py  test_capability_evidence.py  test_chat_upload.py  test_claude_code_gateway.py  test_colab_bootstrap.py  test_commit_gate.py  test_consciousness.py  test_context.py  test_contracts.py  test_cross_model_reasoning_strip.py  test_deep_self_review.py  test_delegation_budget.py  test_devtools_benchmarks.py  test_disabled_tools_policy.py  test_docs_sync.py  test_evolution_redesign.py  test_evolution_stop_and_cost.py  test_evolve_pro.py  test_extension_companion.py  test_extension_loader.py  test_extension_process_runner.py  test_extensions_api.py  test_external_workspace_access.py  test_filesystem_root_labels.py  test_filesystem_root_observability.py  test_gateway_history.py  test_gateway_parity.py  test_git_review_pipeline.py  test_headless_cli.py  test_host_service_api.py  test_launcher_sync.py  test_llm_budget.py  (+78 more)
tests/fixtures/: chat_logs_ui_static_checks.json
web/: app.js  onboarding.css  package.json  settings.css  style.css
web/modules/: api_client.js  api_types.js  chat.js  costs.js  evolution.js  logs.js  (+12 more)
(+36 files in other folders)
